# mcp-screen-operation

./: .gitignore  .pylintrc  CHANGELOG.md  README-ja.md  README.md  pyproject.toml  release.md  requirements.txt  uv.toml
.cursor/: mcp.json
.cursor/rules/: global.mdc  stack.md
.serena/: project.yml
src/screen_operation_server/: automation.py  main.py  operations.py
